<resources>
    <string name="app_name">La Tienda de Lucho</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">latienda@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_gallery">Productos</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slogan">Regístrate y obtén 5% de descuento en nuestra tienda.</string>
    <string name="invitacion">Visita nuestras instalaciones:</string>
    <string name="contactoTitulo">Contáctanos</string>
    <string name="contactoInfo">356-6845-5612 \n Bogotá, Calle #XX No.XX</string>
    <string name="nombre_comentario">Tu nombre (opcional)</string>
    <string name="indica_comentar">Tu comentario</string>
    <string name="titulo_comentario">COMENTA</string>
    <string name="invitacion_a_comentar">Deja tu opinión para la comunidad</string>
    <string name="indica_id_comentario">nombre/id</string>
    <string name="indica_a_comentar">Comentario</string>
    <string name="verbo_comentar">Comentar</string>
    <!--<string name="app_name">Ingresar</string>-->
    <string name="title_active_login">Ingresar</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="name">Nombre completo</string>
    <string name="email">Correo electrónico</string>
    <string name="login">Ingresar</string>
    <string name="repeat_password">Confirma la contraseña</string>
    <string name="signup">Regístrate</string>
    <string name="text_signup">¿No tienes cuenta?</string>
    <string name="link_signup">Regístrate</string>
    <string name="all">TODO</string>
    <string name="user_email">correo@email.com</string>
    <string name="user_name">Usuario</string>
    <string name="update_profile">Guardar</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="forget_password">¿olvidaste tu contraseña?</string>
    <string name="title_check_email">Verificación de correo electrónico</string>
    <string name="subtitle_check_email">Para completar su registro. ¡Por favor! verifica tu correo electrónico y después de clic en continuar.</string>
    <string name="continue_check_email">Continuar</string>
    <string name="title_account_recovery">Recuperación de la cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para enviarte un correo electrónico con los pasos para cambiar tu contraseña.</string>
    <string name="recovery_account">Enviar</string>
    <string name="title_update_password">Cambio de contraseña</string>
    <string name="subtitle_update_password">Por motivos de seguridad para cambiar tu contraseña, primero debes ingresar tu contraseña actual.</string>
    <string name="title_delete_account">Eliminar cuenta</string>
    <string name="subtitle_delete_account">Por motivos de seguridad para eliminar tu cuenta por completo, debes ingresar tu contraseña.</string>
    <string name="delete">Eliminar</string>
    <string name="sign_up_label">Registro</string>
</resources>