<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_mapmode"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/signInActivity"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/listActivity"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Comentar" />
        <item
            android:id="@+id/comentListActivity"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Ver Comentarios" />


    </group>
</menu>