<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tiendaproyecto.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.tiendaproyecto.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.tiendaproyecto.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.tiendaproyecto.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/nav_lista"
        android:name="com.example.tiendaproyecto.ListFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_lista" />
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.tiendaproyecto.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register" />
    <activity
        android:id="@+id/splashScreenActivity"
        android:name="com.example.tiendaproyecto.SplashScreenActivity"
        android:label="activity_splash_screen"
        tools:layout="@layout/activity_splash_screen" />
</navigation>